--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -3,8 +3,7 @@ targets=(
   "ubuntu"
 )
 pkgname="carbonio-prometheus"
-pkgver="2.36.2"
-pkgrel="1"
+pkgver="2.39.1"
 pkgdesc="An open-source systems monitoring and alerting toolkit"
 pkgdesclong=(
   "An open-source systems monitoring and alerting toolkit"
@@ -15,14 +14,14 @@ section="mail"
 priority="optional"
 arch="amd64"
 sources=(
-  "https://github.com/prometheus/prometheus/releases/download/v2.36.2/prometheus-2.36.2.linux-amd64.tar.gz"
+  "https://github.com/prometheus/prometheus/releases/download/v${pkgver}/prometheus-${pkgver}.linux-amd64.tar.gz"
   "prometheus.default"
   "prometheus.service"
   "prometheus.sysusers"
   "prometheus.yml"
 )
 hashsums=(
-  "3f558531c6a575d8372b576b7e76578a98e2744da6b89982ea7021b6f000cddd"
+  "skip"
   "skip"
   "skip"
   "skip"
