Removed loki added autostart for openldap and node

--- a/packages/prometheus-openldap/PKGBUILD
+++ b/packages/prometheus-openldap/PKGBUILD
@@ -56,9 +56,6 @@ package() {
 }
 
 postinst() {
-  if hash systemctl 2>/dev/null; then
-    systemctl daemon-reload 2>/dev/null || true
-  fi
   if hash initctl 2>/dev/null; then
     initctl reload-configuration 2>/dev/null || true
   fi
@@ -66,11 +63,35 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  echo "Please enable the relative exporter job within"
-  echo "/opt/zextras/common/etc/prometheus/prometheus.yml"
-  echo ""
-  echo "Add the required parameters for OpenLDAP connection here"
-  echo "/opt/zextras/common/etc/prometheus/openldap.yml"
-  echo ""
-  echo "Don't forget to enable the systemd unit service"
+  if [ -d /run/systemd/system ]; then
+    systemctl daemon-reload >/dev/null 2>&1 || :
+    systemctl enable carbonio-prometheus-openldap-exporter.service >/dev/null 2>&1 || :
+  fi
+
+  source /opt/zextras/bin/zmshutil || exit 1
+  zmsetvars
+  
+  
+  echo "ldapAddr: $ldap_host:$ldap_port" > /opt/zextras/common/etc/prometheus/openldap.yml
+  echo "ldapUser: $zimbra_ldap_userdn >> /opt/zextras/common/etc/prometheus/openldap.yml
+  echo "ldapPass: $zimbra_ldap_password  >> /opt/zextras/common/etc/prometheus/openldap.yml
+  echo "interval: 1m" >> /opt/zextras/common/etc/prometheus/openldap.yml
+  
+  echo "======================================================"
+  echo "Carbonio LDAP Exporter installed successfully!"
+  echo "You must reload service discover or add this host to prometheus.yml"
+  echo "======================================================"
+}
+
+prerm() {
+  if [ -d /run/systemd/system ]; then
+    systemctl --no-reload disable carbonio-prometheus-openldap-exporter.service >/dev/null 2>&1 || :
+    systemctl stop carbonio-prometheus-openldap-exporter.service >/dev/null 2>&1 || :
+  fi
+}
+
+postrm() {
+  if [ -d /run/systemd/system ]; then
+    systemctl daemon-reload >/dev/null 2>&1 || :
+  fi
 }
