--- a/packages/prometheus-mysqld/PKGBUILD
+++ b/packages/prometheus-mysqld/PKGBUILD
@@ -60,9 +60,6 @@ package() {
 }
 
 postinst() {
-  if hash systemctl 2>/dev/null; then
-    systemctl daemon-reload 2>/dev/null || true
-  fi
   if hash initctl 2>/dev/null; then
     initctl reload-configuration 2>/dev/null || true
   fi
@@ -70,11 +67,34 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  echo "Please enable the relative exporter job within"
-  echo "/opt/zextras/common/etc/prometheus/prometheus.yml"
-  echo ""
-  echo "Add the required parameters for MySQL connection here"
-  echo "/opt/zextras/common/etc/prometheus/mysql_exporter.cnf"
-  echo "Don't forget to enable the systemd unit service"
-  echo ""
+  if [ -d /run/systemd/system ]; then
+    systemctl daemon-reload >/dev/null 2>&1 || :
+    systemctl enable carbonio-prometheus-mysqld-exporter.service >/dev/null 2>&1 || :
+  fi
+
+  source /opt/zextras/bin/zmshutil || exit 1
+  zmsetvars
+
+  echo "user= $zimbra_mysql_user" >> /opt/zextras/common/etc/prometheus/carbonio-prometheus-mysqld-exporter.cnf
+  echo "password= $mysql_zimbra_password >> /opt/zextras/common/etc/prometheus/carbonio-prometheus-mysqld-exporter.cnf
+  echo "host= $mysql_bind_address  >> /opt/zextras/common/etc/prometheus/carbonio-prometheus-mysqld-exporter.cnf
+  echo "port= $mysql_port" >> /opt/zextras/common/etc/prometheus/carbonio-prometheus-mysqld-exporter.cnf
+  
+  echo "======================================================"
+  echo "Carbonio Mysql Exporter installed successfully!"
+  echo "You must reload service discover or add this host to prometheus.yml"
+  echo "======================================================"
+}
+
+prerm() {
+  if [ -d /run/systemd/system ]; then
+    systemctl --no-reload disable carbonio-prometheus-mysqld-exporter.service >/dev/null 2>&1 || :
+    systemctl stop carbonio-prometheus-mysqld-exporter.service >/dev/null 2>&1 || :
+  fi
+}
+
+postrm() {
+  if [ -d /run/systemd/system ]; then
+    systemctl daemon-reload >/dev/null 2>&1 || :
+  fi
 }
