Chaned build for alert-manager

--- a/packages/prometheus-alertmanager/PKGBUILD
+++ b/packages/prometheus-alertmanager/PKGBUILD
@@ -39,16 +39,17 @@ package() {
   cd "${srcdir}/alertmanager-${pkgver}.linux-amd64"
   
   install -Dm755 alertmanager \
-    "${pkgdir}/opt/zextras/common/bin/${pkgname}"
+    "${pkgdir}"/opt/zextras/common/bin/alertmanager
   install -Dm755 amtool \
     "${pkgdir}"/opt/zextras/common/bin/amtool
+	
   install -Dm640 -g210 -t "${pkgdir}"/opt/zextras/common/etc/${pkgname}.yml
   install -dm750 -o210 -g210 "${pkgdir}"/var/lib/alertmanager/data
 
   install -Dm644 "${srcdir}"/alertmanager.service \
-    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+    "${pkgdir}"/usr/lib/systemd/system/${pkgname}.service
   install -Dm644 "${srcdir}"/alertmanager.default \
-    "${pkgdir}"/etc/default/"${pkgname}"
+    "${pkgdir}"/etc/default/${pkgname}
 }
 
 postinst() {
@@ -58,39 +59,11 @@ postinst() {
   if hash initctl 2>/dev/null; then
     initctl reload-configuration 2>/dev/null || true
   fi
-  systemd-sysusers >/dev/null || true
-  systemd-tmpfiles --create >/dev/null || true
-}
-
-
-postinst() {
-  if hash initctl 2>/dev/null; then
-    initctl reload-configuration 2>/dev/null || true
-  fi
 
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  if [ -d /run/systemd/system ]; then
-    systemctl daemon-reload >/dev/null 2>&1 || :
-    systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
-  fi
-
-  echo "======================================================"
-  echo "Carbonio Prometheus Alert Manager installed successfully!"
-  echo "You have to enable it in prometheus.yml"
-  echo "======================================================"
-}
-
-prerm() {
-  if [ -d /run/systemd/system ]; then
-    systemctl --no-reload disable ${pkgname} >/dev/null 2>&1 || :
-    systemctl stop ${pkgname} >/dev/null 2>&1 || :
-  fi
-}
-
-postrm() {
-  if [ -d /run/systemd/system ]; then
-    systemctl daemon-reload >/dev/null 2>&1 || :
-  fi
+  echo "Please enable configure /opt/zextras/common/etc/prometheus/prometheus.yml"
+  echo ""
+  echo "Don't forget to enable the systemd unit service"
 }
