--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -41,9 +41,9 @@ package() {
   cd "${srcdir}/prometheus-${pkgver}.linux-amd64"
   
   install -Dm755 prometheus \
-    "${pkgdir}"/opt/zextras/common/bin/carbonio-prometheus
-  install -Dm755 promtool "\
-    ${pkgdir}"/opt/zextras/common/bin/promtool
+    "${pkgdir}"/opt/zextras/common/bin/prometheus
+  install -Dm755 promtool \
+    "${pkgdir}"/opt/zextras/common/bin/promtool
 
   install -dm750 -o210 -g210 "${pkgdir}"/var/lib/prometheus
   install -dm750 -o210 -g210 "${pkgdir}"/opt/zextras/common/etc/template
@@ -60,13 +60,33 @@ package() {
 }
 
 postinst() {
-  if hash systemctl 2>/dev/null; then
-    systemctl daemon-reload 2>/dev/null || true
-  fi
   if hash initctl 2>/dev/null; then
     initctl reload-configuration 2>/dev/null || true
   fi
+
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
+
+  if [ -d /run/systemd/system ]; then
+    systemctl daemon-reload >/dev/null 2>&1 || :
+    systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
+  fi
+
+  echo "======================================================"
+  echo "Carbonio Prometheus installed successfully!"
+  echo "You have to enable customize your configutration in /opt/zextras/common/etc/prometheus/prometheus.yml"
+  echo "======================================================"
 }
 
+prerm() {
+  if [ -d /run/systemd/system ]; then
+    systemctl --no-reload disable ${pkgname} >/dev/null 2>&1 || :
+    systemctl stop ${pkgname} >/dev/null 2>&1 || :
+  fi
+}
+
+postrm() {
+  if [ -d /run/systemd/system ]; then
+    systemctl daemon-reload >/dev/null 2>&1 || :
+  fi
+}
