--- a/packages/prometheus-node/PKGBUILD
+++ b/packages/prometheus-node/PKGBUILD
@@ -3,7 +3,7 @@ targets=(
   "ubuntu"
 )
 pkgname="carbonio-prometheus-node-exporter"
-pkgver="1.3.1"
+pkgver="1.4.0"
 pkgrel="1"
 pkgdesc="Node exporter for open-source systems monitoring and alerting toolkit"
 pkgdesclong=(
@@ -64,6 +64,7 @@ postinst() {
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
     systemctl enable carbonio-prometheus-node-exporter.service >/dev/null 2>&1 || :
+    systemctl start carbonio-prometheus-node-exporter.service >/dev/null 2>&1 || :
   fi
 
   echo "======================================================"
